adds user creation twitter

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,19 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
+  <header>
+    <div>
+      <% if current_user %>
+        Welcome <%= current_user.name %> !
+        <%= link_to "Sign Out", signout_path %>
+      <%else%>
+        <%= link_to "Sign in: Twitter", "/auth/twitter" %>
+<!-- -->
+      <%end%>
+    </div>
+  </header>
 
 <%= yield %>
 
