--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,10 @@
       <% if current_user %>
         Welcome <%= current_user.name %> !
         <%= link_to "Sign Out", signout_path %>
+        <%= link_to "Allow Instragram Access", "/auth/instagram" %>
+
       <%else%>
         <%= link_to "Sign in: Twitter", "/auth/twitter" %>
-<!-- -->
       <%end%>
     </div>
   </header>
