added facebook access

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
         <%= link_to "Sign Out", signout_path %>
         <%= link_to "Allow Instragram Access", "/auth/instagram" %>
         <%= link_to "Allow EverNote Access", "/auth/evernote" %>
+        <%= link_to "Allow Facebook Access", "/auth/facebook" %>
 
       <%else%>
         <%= link_to "Sign in: Twitter", "/auth/twitter" %>
