--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,9 @@
-hello
+
+<div class="container">
+
+  <!-- Main jumbotron for a primary marketing message or call to action -->
+  <div class="jumbotron" id="foreverlight">
+    <h1>Forever ur Notes</h1>
+    <p>ForeverNotes gives you the tool to combine your Evernote notes with social media feeds to create a monthly journal.</p>
+    <p><a href="#" class="btn btn-primary btn-lg btn-success" role="button">Learn more &raquo;</a></p>
+  </div>
