--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,63 @@
-// Place all the styles related to the home controller here.
+/*// Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// You can use Sass (SCSS) here: http://sass-lang.com/*/
+
+body {
+  font-family: "webfont_light", Helvetica, Arial, sans-serif;
+}
+
+.jumbotro #foreverlight{
+  padding-right: 100px;
+}
+
+#foreverlight h1 {
+  font-family: "webfont_light", Helvetica, Arial, sans-serif;
+  /*padding-top: 50px;*/
+  margin-top: 60px;
+}
+
+#forevergreen {
+  background-color: #72a441;
+  border-color: #6C9E3A;
+
+}
+
+.forevergreynav li a {
+  color: #e7e7e7 !important;
+}
+
+.navbar-brand {
+  color: #e7e7e7 !important;
+}
+
+/*.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #e7e7e7;
+    background-color: #555;
+}*/
+
+#forevergrey {
+  background-color: #fbfbfb;
+  background: transparent;
+}
+
+ul .dropdown-menu {
+  background-color: #72a441;
+}
+
+.dropdown-menu a {
+  color: #333;
+}
+
+.dropdown-menu li a:hover, .dropdown-menu li a:focus, .dropdown-submenu:hover a {
+  color: #333;
+}
+
+/*.dropdown-menu li a:hover {
+  color: red;
+}*/
+
+.footer {
+  text-align: center;
+}
