--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,3 +7,9 @@
     <p>ForeverNotes gives you the tool to combine your Evernote notes with social media feeds to create a monthly journal.</p>
     <p><a href="#" class="btn btn-primary btn-lg btn-success" role="button">Learn more &raquo;</a></p>
   </div>
+
+</div>
+
+<div class="footer">
+  <p>&copy; ForeverNote 2014</p>
+</div>
