--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,13 +29,15 @@
               <% if current_user %>
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome <%= current_user.name %> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href='#'>Dashboard </a></li>
+                  <li><a href='/home/<%=current_user.id%>'>Go to my Dashboard </a></li>
+                  <li><%= link_to "Allow Instragram Access", "/auth/instagram" %></li>
+                  <li><%= link_to "Allow EverNote Access", "/auth/evernote" %></li>
+                  <li><%= link_to "Allow Facebook Access", "/auth/facebook" %></li>
                   <li><%= link_to "Sign Out", signout_path %></li>
                 <%else%>
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Sign in: Twitter", "/auth/twitter" %></li>
-          <!-- -->
                 <%end%>
 <!--                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
@@ -67,8 +69,6 @@
   <%= yield %>
 </div>
 
-<div class="footer">
-  <p>&copy; ForeverNote 2014</p>
-</div>
+
 </body>
 </html>
