--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -15,48 +15,17 @@
   <body class="cbp-spmenu-push">
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
       <h3>Menu</h3>
-      <a href="#">Add New Notebook</a>
+      <a href="#"><img src='/assets/notebook.png' alt='notebook'>+New Notebook</a>
+      <a href="#"><img src='/assets/Evernote.png' alt='evernote'></a>
+      <a href="#"><img src='/assets/Facebook.png' alt='facebook'></a>
+      <a href="/instagram"><img src='/assets/Instagram.png' alt='instagram'></a>
+      <a href="#"><img src='/assets/Pinterest.png' alt='pinterest'></a>
+      <a href="#"><img src='/assets/Tumblr.png' alt='tumblr'></a>
+      <a href="#"><img src='/assets/Twitter.png' alt='twitter'></a>
+
 
     </nav>
-    <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right" id="cbp-spmenu-s2">
-      <h3>Menu</h3>
-      <a href="#">Celery seakale</a>
-      <a href="#">Dulse daikon</a>
-      <a href="#">Zucchini garlic</a>
-      <a href="#">Catsear azuki bean</a>
-      <a href="#">Dandelion bunya</a>
-      <a href="#">Rutabaga</a>
-    </nav>
-    <nav class="cbp-spmenu cbp-spmenu-horizontal cbp-spmenu-top" id="cbp-spmenu-s3">
-      <h3>Menu</h3>
-      <a href="#">Celery seakale</a>
-      <a href="#">Dulse daikon</a>
-      <a href="#">Zucchini garlic</a>
-      <a href="#">Catsear azuki bean</a>
-      <a href="#">Dandelion bunya</a>
-      <a href="#">Rutabaga</a>
-      <a href="#">Celery seakale</a>
-      <a href="#">Dulse daikon</a>
-      <a href="#">Zucchini garlic</a>
-      <a href="#">Catsear azuki bean</a>
-      <a href="#">Dandelion bunya</a>
-      <a href="#">Rutabaga</a>
-    </nav>
-    <nav class="cbp-spmenu cbp-spmenu-horizontal cbp-spmenu-bottom" id="cbp-spmenu-s4">
-      <h3>Menu</h3>
-      <a href="#">Celery seakale</a>
-      <a href="#">Dulse daikon</a>
-      <a href="#">Zucchini garlic</a>
-      <a href="#">Catsear azuki bean</a>
-      <a href="#">Dandelion bunya</a>
-      <a href="#">Rutabaga</a>
-      <a href="#">Celery seakale</a>
-      <a href="#">Dulse daikon</a>
-      <a href="#">Zucchini garlic</a>
-      <a href="#">Catsear azuki bean</a>
-      <a href="#">Dandelion bunya</a>
-      <a href="#">Rutabaga</a>
-    </nav>
+
     <div class="container" id="dashboard">
       <header class="clearfix">
         <!-- <span><%=current_user.name%></span> -->
@@ -80,42 +49,38 @@
         menuRight = document.getElementById( 'cbp-spmenu-s2' ),
         menuTop = document.getElementById( 'cbp-spmenu-s3' ),
         menuBottom = document.getElementById( 'cbp-spmenu-s4' ),
-        showLeft = document.getElementById( 'showLeft' ),
-        showRight = document.getElementById( 'showRight' ),
-        showTop = document.getElementById( 'showTop' ),
-        showBottom = document.getElementById( 'showBottom' ),
         showLeftPush = document.getElementById( 'showLeftPush' ),
-        showRightPush = document.getElementById( 'showRightPush' ),
         body = document.body;
 
 
       showLeftPush.onclick = function() {
         classie.toggle( this, 'active' );
+        console.log(this);
+        $('#showLeftPush').hide();
         classie.toggle( body, 'cbp-spmenu-push-toright' );
         classie.toggle( menuLeft, 'cbp-spmenu-open' );
-        disableOther( 'showLeftPush' );
       };
 
 
-      function disableOther( button ) {
-        if( button !== 'showLeft' ) {
-          classie.toggle( showLeft, 'disabled' );
-        }
-        if( button !== 'showRight' ) {
-          classie.toggle( showRight, 'disabled' );
-        }
-        if( button !== 'showTop' ) {
-          classie.toggle( showTop, 'disabled' );
-        }
-        if( button !== 'showBottom' ) {
-          classie.toggle( showBottom, 'disabled' );
-        }
-        if( button !== 'showLeftPush' ) {
-          classie.toggle( showLeftPush, 'disabled' );
-        }
-        if( button !== 'showRightPush' ) {
-          classie.toggle( showRightPush, 'disabled' );
-        }
-      }
+      // function disableOther( button ) {
+      //   if( button !== 'showLeft' ) {
+      //     classie.toggle( showLeft, 'disabled' );
+      //   }
+      //   if( button !== 'showRight' ) {
+      //     classie.toggle( showRight, 'disabled' );
+      //   }
+      //   if( button !== 'showTop' ) {
+      //     classie.toggle( showTop, 'disabled' );
+      //   }
+      //   if( button !== 'showBottom' ) {
+      //     classie.toggle( showBottom, 'disabled' );
+      //   }
+      //   if( button !== 'showLeftPush' ) {
+      //     classie.toggle( showLeftPush, 'disabled' );
+      //   }
+      //   if( button !== 'showRightPush' ) {
+      //     classie.toggle( showRightPush, 'disabled' );
+      //   }
+      // }
     </script>
   </body>
