--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -15,7 +15,13 @@
   <body class="cbp-spmenu-push">
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
       <h3>Menu</h3>
-      <a href="#">Add New Notebook</a>
+
+      <form id="new_notebook">
+        <a href="#">Add New Notebook</a>
+        <input type ='text' id= "notebook_name"></input>
+        <input type ='submit' value='create'></input>
+      </form>
+
 
     </nav>
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right" id="cbp-spmenu-s2">
