--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -21,6 +21,9 @@
         <input type ='submit' value='create'></input>
       </form>
       <a href="#"><img src='/assets/notebook.png' alt='notebook'>+New Notebook</a>
+        <input type ='text' id= "notebook_name"></input>
+        <input type ='submit' value='create'></input>
+      </form>
       <a href="#"><img src='/assets/Evernote.png' alt='evernote'></a>
       <a href="#"><img src='/assets/Facebook.png' alt='facebook'></a>
       <a href="/instagram"><img src='/assets/Instagram.png' alt='instagram'></a>
