added journals model

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -16,14 +16,14 @@
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
       <h3>Menu</h3>
       <form id="new_notebook">
-        <a href="#">Add New Notebook</a>
+        <img src='/assets/notebook.png' alt='notebook'>+New Notebook
         <input type ='text' id= "notebook_name"></input>
         <input type ='submit' value='create'></input>
       </form>
-      <a href="#"><img src='/assets/notebook.png' alt='notebook'>+New Notebook</a>
-        <input type ='text' id= "notebook_name"></input>
-        <input type ='submit' value='create'></input>
-      </form>
+      <div id="journal_list">
+        <h4> Journals</h4>
+      </div>
+
       <a href="#"><img src='/assets/Evernote.png' alt='evernote'></a>
       <a href="#"><img src='/assets/Facebook.png' alt='facebook'></a>
       <a href="/instagram"><img src='/assets/Instagram.png' alt='instagram'></a>
