changed my asdtudsfasdaf

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -15,21 +15,15 @@
   <body class="cbp-spmenu-push">
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
       <h3>Menu</h3>
-      <form id="new_notebook">
-        <img src='/assets/notebook.png' alt='notebook'>+New Notebook
-        <input type ='text' id= "notebook_name"></input>
-        <input type ='submit' value='create'></input>
-      </form>
-      <div id="journal_list">
-        <h4> Journals</h4>
-      </div>
-
+      <a href="#"><img src='/assets/notebook.png' alt='notebook'>+New Notebook</a>
       <a href="#"><img src='/assets/Evernote.png' alt='evernote'></a>
       <a href="#"><img src='/assets/Facebook.png' alt='facebook'></a>
       <a href="/instagram"><img src='/assets/Instagram.png' alt='instagram'></a>
       <a href="#"><img src='/assets/Pinterest.png' alt='pinterest'></a>
       <a href="#"><img src='/assets/Tumblr.png' alt='tumblr'></a>
       <a href="#"><img src='/assets/Twitter.png' alt='twitter'></a>
+
+
     </nav>
 
     <div class="container" id="dashboard">
