--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -15,13 +15,13 @@
   <body class="cbp-spmenu-push">
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
       <h3>Menu</h3>
-      <a href="#"><img src='/assets/notebook.png' alt='notebook'>+New Notebook</a>
-      <a href="#"><img src='/assets/Evernote.png' alt='evernote'></a>
-      <a href="#"><img src='/assets/Facebook.png' alt='facebook'></a>
-      <a href="/instagram"><img src='/assets/Instagram.png' alt='instagram'></a>
-      <a href="#"><img src='/assets/Pinterest.png' alt='pinterest'></a>
-      <a href="#"><img src='/assets/Tumblr.png' alt='tumblr'></a>
-      <a href="#"><img src='/assets/Twitter.png' alt='twitter'></a>
+      <a id="notebook" href="#"><img src='/assets/notebook.png' alt='notebook'>+New Notebook</a>
+      <a id="evernote" href="#"><img src='/assets/Evernote.png' alt='evernote'></a>
+      <a id="facebook" href="#"><img src='/assets/Facebook.png' alt='facebook'></a>
+      <a id="instagram" href="#"><img src='/assets/Instagram.png' alt='instagram'></a>
+      <a id="pintrest" href="#"><img src='/assets/Pinterest.png' alt='pinterest'></a>
+      <a id="tumblr" href="#"><img src='/assets/Tumblr.png' alt='tumblr'></a>
+      <a id="twitter" href="#"><img src='/assets/Twitter.png' alt='twitter'></a>
 
 
     </nav>
@@ -31,6 +31,8 @@
         <!-- <span><%=current_user.name%></span> -->
         <h1>Dashboard</h1>
       </header>
+      <div class='instagram'>
+      </div>
       <div class="main">
         <section class="buttonset">
           <h2></h2>
