added journal form

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -15,7 +15,11 @@
   <body class="cbp-spmenu-push">
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
       <h3>Menu</h3>
-      <a id="notebook" href="#"><img src='/assets/notebook.png' alt='notebook'>+New Notebook</a>
+      <img src='/assets/notebook.png' alt='notebook'>+New Journal
+      <form id = 'new_notebook'>
+        <input type="text" id='notebook_name'>
+        <input type= "submit" value="create">
+      </form>
       <a id="evernote" href="#"><img src='/assets/Evernote.png' alt='evernote'></a>
       <a id="facebook" href="#"><img src='/assets/Facebook.png' alt='facebook'></a>
       <a id="instagram" href="#"><img src='/assets/Instagram.png' alt='instagram'></a>
