add isotope, not working yet

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -42,7 +42,7 @@
         <!-- <span><%=current_user.name%></span> -->
         <h1>Dashboard</h1>
       </header>
-      <div class='instagram'>
+      <div class='instagram' id="image_container">
       </div>
       <div class="main">
         <section class="buttonset">
