--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
   <div class="jumbotron" id="foreverlight">
     <h1>Forever ur Notes</h1>
     <p>ForeverNotes gives you the tool to combine your Evernote notes with social media feeds to create a monthly journal.</p>
-    <p><a href="#" class="btn btn-primary btn-lg btn-success" role="button">Learn more &raquo;</a></p>
+    <p><a href="https://projects.invisionapp.com/share/KDO20G9P" class="btn btn-primary btn-lg btn-success" role="button">Learn more &raquo;</a></p>
   </div>
 
 </div>
