--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -15,14 +15,16 @@
   <body class="cbp-spmenu-push">
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
       <h3>Menu</h3>
-      <img src='/assets/notebook.png' alt='notebook'>+New Journal
+
+      <img src='/assets/notebook.png' alt='notebook'><b style="color:#ffffff;">+New Journal </b>
       <form id = 'new_notebook'>
         <input type="text" id='notebook_name'>
         <input type= "submit" value="create">
       </form>
-      <div id="jounal_list">
+      <div id="journal_list">
         <% if @journals %>
           <% @journals.each do |journal| %>
+          <p style="color:#ffffff ; text-align: center;">
           <p><%=journal.name%> </p>
           <%end%>
         <%end%>
