--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -58,7 +58,7 @@
       </div>
     </div>
     <!-- Classie - class helper functions by @desandro https://github.com/desandro/classie -->
-    <script src="js/classie.js"></script>
+    <!-- <script src="javascripts/classie.js"></script> -->
     <script>
       var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
         menuRight = document.getElementById( 'cbp-spmenu-s2' ),
@@ -70,7 +70,7 @@
 
       showLeftPush.onclick = function() {
         classie.toggle( this, 'active' );
-        console.log(this);
+        // console.log(this);
         $('#showLeftPush').hide();
         classie.toggle( body, 'cbp-spmenu-push-toright' );
         classie.toggle( menuLeft, 'cbp-spmenu-open' );
