small controller tweaks

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -55,7 +55,7 @@
           <br/>
           <br/>
           <!-- Class "cbp-spmenu-open" gets applied to menu and "cbp-spmenu-push-toleft" or "cbp-spmenu-push-toright" to the body -->
-          <button id="showLeftPush">Create a journal and curate your post.</button>
+          <button id="showLeftPush">Create a journal and curate your post</button>
 
         </section>
       </div>
